feat: add ribbon component

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -17,6 +17,7 @@
   --color-lightGray: #eaeaea;
   --color-gray: #8f8f8f;
   --color-darkGray: #2e2f42;
+  --color-secondary-ribbon: #ff5f5f;
 
   --gradient-primary: linear-gradient(
     179deg,
